# C-template

./: .gitignore  README.md
cmake/: CMakeLists.txt  README
cmake/src/: main.c
cmake/src/implement/: chopstick.c  person.c
cmake/src/include/: Color.h  Thread.h  chopstick.h  log4c.h  person.h  progress.h
makefile/: Makefile  README.md
src/: main.c
src/implement/: Thread.c
src/include/: Color.h  log4c.h
